update : 파라미터 수정

--- a/data.ipynb
+++ b/data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1cbda985",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
     "    params = {\n",
     "        \"serviceKey\": SERVICE_KEY,\n",
     "        \"pageNo\": \"1\",\n",
-    "        \"numOfRows\": \"5\",\n",
+    "        \"numOfRows\": \"1000\",\n",
     "        \"type\": \"json\"\n",
     "    }\n",
     "    params.update(custom_params)\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "a0408217",
    "metadata": {},
    "outputs": [],
@@ -54,9 +54,9 @@
     "        \"sysRegDateTo\": end_date\n",
     "    })\n",
     "\n",
-    "def get_impat_evaluation_info(impact_no: str):\n",
+    "def get_impat_evaluation_info(eval_no: str):\n",
     "    return call_api_to_file(\"getImpatEvalutionInfo\", \"지하안전평가_정보\", {\n",
-    "        \"impatNo\": impact_no\n",
+    "        \"evaltNo\": eval_no\n",
     "    })\n",
     "\n",
     "def get_small_impat_evaluation_list(start_date: str, end_date: str):\n",
@@ -65,9 +65,9 @@
     "        \"sysRegDateTo\": end_date\n",
     "    })\n",
     "\n",
-    "def get_small_impat_evaluation_info(impact_no: str):\n",
+    "def get_small_impat_evaluation_info(eval_no: str):\n",
     "    return call_api_to_file(\"getSmallImpactEvalutionInfo\", \"소규모지하안전평가_정보\", {\n",
-    "        \"smImpatNo\": impact_no\n",
+    "        \"evalNo\": eval_no\n",
     "    })\n",
     "\n",
     "def get_post_construction_check_list(start_date: str, end_date: str):\n",
@@ -76,9 +76,9 @@
     "        \"sysRegDateTo\": end_date\n",
     "    })\n",
     "\n",
-    "def get_post_construction_check_info(post_no: str):\n",
+    "def get_post_construction_check_info(eval_no: str):\n",
     "    return call_api_to_file(\"getAfterUndergroundSafetyInspectionInfo\", \"착공후지하안전조사_정보\", {\n",
-    "        \"afterUndrSfNo\": post_no\n",
+    "        \"evalNo\": eval_no\n",
     "    })\n",
     "\n",
     "def get_underground_facility_list(start_ymd: str, end_ymd: str):\n",
@@ -89,12 +89,12 @@
     "\n",
     "def get_underground_facility_info(facility_no: str):\n",
     "    return call_api_to_file(\"getUndergroundUtilityInfo\", \"안전점검대상_지하시설물_정보\", {\n",
-    "        \"ugrdUtilNo\": facility_no\n",
+    "        \"facilNo\": facility_no\n",
     "    })\n",
     "\n",
     "def get_underground_facility_result(facility_no: str):\n",
     "    return call_api_to_file(\"getUndergroundUtilityResult\", \"지하시설물_점검결과\", {\n",
-    "        \"ugrdUtilNo\": facility_no\n",
+    "        \"facilNo\": facility_no\n",
     "    })\n",
     "\n",
     "def get_risk_assessment_list(start_ymd: str, end_ymd: str):\n",
@@ -121,7 +121,7 @@
     "\n",
     "def get_priority_control_info(control_no: str, heavy_ymd: str):\n",
     "    return call_api_to_file(\"getPriorityControlTargetInfo\", \"중점관리대상_정보\", {\n",
-    "        \"heavyNo\": control_no,\n",
+    "        \"facilNo\": control_no,\n",
     "        \"heavyYmd\": heavy_ymd\n",
     "    })\n",
     "\n",
@@ -129,9 +129,9 @@
     "    return call_api_to_file(\"getSubsidenceList\", \"지반침하사고_리스트\", {\n",
     "        \"sagoDateFrom\": start_date,\n",
     "        \"sagoDateTo\": end_date,\n",
-    "        \"geomLon\": lon,\n",
-    "        \"geomLat\": lat,\n",
-    "        \"buffer\": buffer_km\n",
+    "        # \"geomLon\": lon,\n",
+    "        # \"geomLat\": lat,\n",
+    "        # \"buffer\": buffer_km\n",
     "    })\n",
     "\n",
     "def get_subsidence_accident_info(accident_no: str):\n",
@@ -159,14 +159,14 @@
     "    return call_api_to_file(\"getUndergroundDevelopementProjectList\", \"지하개발사업_리스트\", {\n",
     "        \"staPlanYmdFrom\": start_date,\n",
     "        \"staPlanYmdTo\": end_date,\n",
-    "        \"geomLon\": lon,\n",
-    "        \"geomLat\": lat,\n",
-    "        \"buffer\": buffer_km\n",
+    "        # \"geomLon\": lon,\n",
+    "        # \"geomLat\": lat,\n",
+    "        # \"buffer\": buffer_km\n",
     "    })\n",
     "\n",
     "def get_underground_project_info(project_no: str):\n",
     "    return call_api_to_file(\"getUndergroundDevelopementProjectInfo\", \"지하개발사업_정보\", {\n",
-    "        \"undrDevPrjctCd\": project_no\n",
+    "        \"saupNo\": project_no\n",
     "    })"
    ]
   },
