update : 파라미터 수정

--- a/data.ipynb
+++ b/data.ipynb
@@ -10,13 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1cbda985",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tqdm import tqdm\n",
+    "import time\n",
     "import requests\n",
     "import json\n",
+    "import os\n",
     "\n",
     "SERVICE_KEY = \"48RysNl1ik0Yayfh1ih7lOwKPbSQmus+nhN76dcuw/5LSr4uXnBrSZEPYq5QsUWf/37wyPGCbmOawE5X2mMeBw==\"\n",
     "BASE_URL = \"https://apis.data.go.kr/1611000/undergroundsafetyinfo\"\n",
@@ -25,25 +28,34 @@
     "    params = {\n",
     "        \"serviceKey\": SERVICE_KEY,\n",
     "        \"pageNo\": \"1\",\n",
-    "        \"numOfRows\": \"1000\",\n",
+    "        \"numOfRows\": \"10\",\n",
     "        \"type\": \"json\"\n",
     "    }\n",
     "    params.update(custom_params)\n",
     "    url = f\"{BASE_URL}/{endpoint}\"\n",
-    "    try:\n",
-    "        response = requests.get(url, params=params)\n",
-    "        data = response.json()\n",
-    "        with open(f\"Database/openapi/{output_filename}.json\", \"w\", encoding=\"utf-8\") as f:\n",
-    "            json.dump(data, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "    # tqdm bar for a single task\n",
+    "    with tqdm(total=1, desc=f\"📡 {output_filename}\", bar_format=\"{l_bar}{bar} {elapsed}s\") as pbar:\n",
+    "        try:\n",
+    "            response = requests.get(url, params=params)\n",
+    "            data = response.json()\n",
+    "\n",
+    "            os.makedirs(\"Database/openapi\", exist_ok=True)\n",
+    "            with open(f\"Database/openapi/{output_filename}.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "                json.dump(data, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "            pbar.update(1)\n",
     "            print(f\"✅ 저장 완료: {output_filename}.json\")\n",
-    "        return f\"\"\n",
-    "    except Exception as e:\n",
-    "        return f\"❌ 오류 발생: {e}\""
+    "            return \"\"\n",
+    "        except Exception as e:\n",
+    "            pbar.update(1)\n",
+    "            print(f\"❌ 오류 발생: {e}\")\n",
+    "            return f\"❌ 오류 발생: {e}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "a0408217",
    "metadata": {},
    "outputs": [],
@@ -125,7 +137,7 @@
     "        \"heavyYmd\": heavy_ymd\n",
     "    })\n",
     "\n",
-    "def get_subsidence_accident_list(start_date: str, end_date: str, lon: str, lat: str, buffer_km: str):\n",
+    "def get_subsidence_accident_list(start_date: str, end_date: str):#, lon: str, lat: str, buffer_km: str):\n",
     "    return call_api_to_file(\"getSubsidenceList\", \"지반침하사고_리스트\", {\n",
     "        \"sagoDateFrom\": start_date,\n",
     "        \"sagoDateTo\": end_date,\n",
@@ -155,7 +167,7 @@
     "        \"corpCd\": corp_cd\n",
     "    })\n",
     "\n",
-    "def get_underground_project_list(start_date: str, end_date: str, lon: str, lat: str, buffer_km: str):\n",
+    "def get_underground_project_list(start_date: str, end_date: str):#, lon: str, lat: str, buffer_km: str):\n",
     "    return call_api_to_file(\"getUndergroundDevelopementProjectList\", \"지하개발사업_리스트\", {\n",
     "        \"staPlanYmdFrom\": start_date,\n",
     "        \"staPlanYmdTo\": end_date,\n",
@@ -180,30 +192,309 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "f3ff8677",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 지하안전평가_리스트: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 저장 완료: 지하안전평가_리스트.json\n",
-      "✅ 저장 완료: 지하안전평가_정보.json\n",
-      "✅ 저장 완료: 소규모지하안전평가_리스트.json\n",
-      "✅ 저장 완료: 소규모지하안전평가_정보.json\n",
-      "✅ 저장 완료: 착공후지하안전조사_리스트.json\n",
-      "✅ 저장 완료: 착공후지하안전조사_정보.json\n",
-      "✅ 저장 완료: 안전점검대상_지하시설물_리스트.json\n",
-      "✅ 저장 완료: 안전점검대상_지하시설물_정보.json\n",
-      "✅ 저장 완료: 지하시설물_점검결과.json\n",
-      "✅ 저장 완료: 지반침하위험도평가_리스트.json\n",
-      "✅ 저장 완료: 중점관리대상_리스트.json\n",
-      "✅ 저장 완료: 중점관리대상_정보.json\n",
-      "✅ 저장 완료: 지반침하사고_리스트.json\n",
-      "✅ 저장 완료: 지반침하사고_정보.json\n",
-      "✅ 저장 완료: 지하개발사업_리스트.json\n",
+      "✅ 저장 완료: 지하안전평가_리스트.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 지하안전평가_정보: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 저장 완료: 지하안전평가_정보.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 소규모지하안전평가_리스트: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 저장 완료: 소규모지하안전평가_리스트.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 소규모지하안전평가_정보: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 저장 완료: 소규모지하안전평가_정보.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 착공후지하안전조사_리스트: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 저장 완료: 착공후지하안전조사_리스트.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 착공후지하안전조사_정보: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 저장 완료: 착공후지하안전조사_정보.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 안전점검대상_지하시설물_리스트: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 저장 완료: 안전점검대상_지하시설물_리스트.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 안전점검대상_지하시설물_정보: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 저장 완료: 안전점검대상_지하시설물_정보.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 지하시설물_점검결과: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 저장 완료: 지하시설물_점검결과.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 지반침하위험도평가_리스트: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 저장 완료: 지반침하위험도평가_리스트.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 지반침하_안전조치내용: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ 오류 발생: Expecting value: line 1 column 1 (char 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 지반침하_응급조치내용: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ 오류 발생: Expecting value: line 1 column 1 (char 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 중점관리대상_리스트: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 저장 완료: 중점관리대상_리스트.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 중점관리대상_정보: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 저장 완료: 중점관리대상_정보.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 지반침하사고_리스트: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 저장 완료: 지반침하사고_리스트.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 지반침하사고_정보: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 저장 완료: 지반침하사고_정보.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 전문기관_리스트: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ 오류 발생: Expecting value: line 1 column 1 (char 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 전문기관_정보: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ 오류 발생: Expecting value: line 1 column 1 (char 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 전문기관_실적: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ 오류 발생: Expecting value: line 1 column 1 (char 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 지하개발사업_리스트: 100%|██████████ 00:00s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 저장 완료: 지하개발사업_리스트.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "📡 지하개발사업_정보: 100%|██████████ 00:00s"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "✅ 저장 완료: 지하개발사업_정보.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
@@ -212,50 +503,50 @@
        "''"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 지하안전평가\n",
-    "get_impat_evaluation_list(\"20190101\", \"20231231\")  # ✅ 지하안전평가 리스트 조회\n",
-    "get_impat_evaluation_info(\"E00234000417\")  # ✅ 지하안전평가 상세 정보 조회\n",
+    "# ✅ 지하안전평가\n",
+    "get_impat_evaluation_list(\"20210101\", \"20211011\")  # 리스트 조회\n",
+    "get_impat_evaluation_info(\"E10091000030\")  # 상세 조회\n",
     "\n",
-    "# 소규모지하안전평가\n",
-    "get_small_impat_evaluation_list(\"20200101\", \"20231231\")  # ✅ 리스트\n",
-    "get_small_impat_evaluation_info(\"E00126000025\")  # ✅ 상세 정보\n",
+    "# ✅ 소규모 지하안전평가\n",
+    "get_small_impat_evaluation_list(\"20210101\", \"20211011\")  # 리스트 조회\n",
+    "get_small_impat_evaluation_info(\"E10091000030\")  # 상세 조회\n",
     "\n",
-    "# 착공 후 지하안전조사\n",
-    "get_post_construction_check_list(\"20200101\", \"20231231\")  # ✅ 리스트\n",
-    "get_post_construction_check_info(\"E00234000417\")  # ✅ 상세 정보\n",
+    "# ✅ 착공 후 지하안전조사\n",
+    "get_post_construction_check_list(\"20210101\", \"20211011\")  # 리스트 조회\n",
+    "get_post_construction_check_info(\"E10091000030\")  # 상세 조회\n",
     "\n",
-    "# 안전점검대상 지하시설물\n",
-    "get_underground_facility_list(\"20180101\", \"20231231\")  # ✅ 리스트\n",
-    "get_underground_facility_info(\"E00234000417\")  # ✅ 상세 정보\n",
-    "get_underground_facility_result(\"E00234000417\")  # ✅ 점검 결과\n",
+    "# ✅ 안전점검대상 지하시설물\n",
+    "get_underground_facility_list(\"20210101\", \"20211011\")  # 리스트 조회\n",
+    "get_underground_facility_info(\"GAS1900-000001\")  # 상세 조회\n",
+    "get_underground_facility_result(\"GAS1900-000001\")  # 점검 결과 조회\n",
     "\n",
-    "# 지반침하위험도\n",
-    "get_risk_assessment_list(\"20180101\", \"20231231\")  # ✅ 리스트\n",
-    "get_risk_safety_info(\"E00234000417\")  # ✅ 안전조치 내용\n",
-    "get_risk_emergency_info(\"E00234000417\")  # ✅ 응급조치 내용\n",
+    "# ✅ 지반침하위험도평가\n",
+    "get_risk_assessment_list(\"20210101\", \"20211011\")  # 리스트 조회\n",
+    "get_risk_safety_info(\"E10091000030\")  # 안전조치내용 조회\n",
+    "get_risk_emergency_info(\"E10091000030\")  # 응급조치내용 조회\n",
     "\n",
-    "# 중점관리대상\n",
-    "get_priority_control_list(\"20180101\", \"20191231\")  # ✅ 리스트\n",
-    "get_priority_control_info(\"E00234000417\", \"20180822\")  # ✅ 상세 정보 (heavyNo, heavyYmd)\n",
+    "# ✅ 중점관리대상\n",
+    "get_priority_control_list(\"20210101\", \"20211011\")  # 리스트 조회\n",
+    "get_priority_control_info(\"GAS1900-000001\", \"20210101\")  # 상세 조회\n",
     "\n",
-    "# 지반침하사고\n",
-    "get_subsidence_accident_list(\"20180101\", \"20191231\", \"126.9780\", \"37.5665\", \"5\")  # ✅ 리스트\n",
-    "get_subsidence_accident_info(\"E00234000417\")  # ✅ 상세 정보\n",
+    "# ✅ 지반침하사고\n",
+    "get_subsidence_accident_list(\"20210101\", \"20211011\")#, \"126.9780\", \"37.5665\", \"5\")  # 리스트 조회\n",
+    "get_subsidence_accident_info(\"20220138\")  # 상세 조회\n",
     "\n",
-    "# 전문기관\n",
-    "get_agency_list(\"20180101\", \"20231231\")  # ✅ 리스트 (entryYmdFrom, entryYmdTo)\n",
-    "get_agency_info(\"E00001\")  # ✅ 상세 정보 (corpCd)\n",
-    "get_agency_results(\"E00001\")  # ✅ 실적 조회 (corpCd)\n",
+    "# ✅ 전문기관\n",
+    "get_agency_list(\"20210101\", \"20211011\")  # 리스트 조회\n",
+    "get_agency_info(\"E00010\")  # 상세 조회\n",
+    "get_agency_results(\"E00010\")  # 실적 조회\n",
     "\n",
-    "# 지하개발사업\n",
-    "get_underground_project_list(\"20180101\", \"20191231\", \"126.9780\", \"37.5665\", \"5\")  # ✅ 리스트\n",
-    "get_underground_project_info(\"E00234000417\")  # ✅ 상세 정보"
+    "# ✅ 지하개발사업\n",
+    "get_underground_project_list(\"20210101\", \"20211011\")# , \"126.9780\", \"37.5665\", \"5\")  # 리스트 조회\n",
+    "get_underground_project_info(\"20190072\")  # 상세 조회"
    ]
   },
   {
