update : 파라미터 수정

--- a/data.ipynb
+++ b/data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "1cbda985",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
     "    params = {\n",
     "        \"serviceKey\": SERVICE_KEY,\n",
     "        \"pageNo\": \"1\",\n",
-    "        \"numOfRows\": \"10\",\n",
+    "        \"numOfRows\": \"5\",\n",
     "        \"type\": \"json\"\n",
     "    }\n",
     "    params.update(custom_params)\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a0408217",
    "metadata": {},
    "outputs": [],
@@ -116,12 +116,12 @@
     "    })\n",
     "\n",
     "def get_risk_safety_info(eval_no: str):\n",
-    "    return call_api_to_file(\"getSubsidenceEvalutionSafety\", \"지반침하_안전조치내용\", {\n",
+    "    return call_api_to_file(\"getSubsidenceResult\", \"지반침하_안전조치내용\", {\n",
     "        \"evalNo\": eval_no\n",
     "    })\n",
     "\n",
     "def get_risk_emergency_info(eval_no: str):\n",
-    "    return call_api_to_file(\"getSubsidenceEvalutionEmergency\", \"지반침하_응급조치내용\", {\n",
+    "    return call_api_to_file(\"getSubsidenceExpediency\", \"지반침하_응급조치내용\", {\n",
     "        \"evalNo\": eval_no\n",
     "    })\n",
     "\n",
@@ -152,18 +152,18 @@
     "    })\n",
     "\n",
     "def get_agency_list(start_date: str, end_date: str):\n",
-    "    return call_api_to_file(\"getProfessionalInstitutionList\", \"전문기관_리스트\", {\n",
+    "    return call_api_to_file(\"getProfessionalInstituionList\", \"전문기관_리스트\", {\n",
     "        \"entryYmdFrom\": start_date,\n",
     "        \"entryYmdTo\": end_date\n",
     "    })\n",
     "\n",
     "def get_agency_info(corp_cd: str):\n",
-    "    return call_api_to_file(\"getProfessionalInstitutionInfo\", \"전문기관_정보\", {\n",
+    "    return call_api_to_file(\"getProfessionalInstituionInfo\", \"전문기관_정보\", {\n",
     "        \"corpCd\": corp_cd\n",
     "    })\n",
     "\n",
     "def get_agency_results(corp_cd: str):\n",
-    "    return call_api_to_file(\"getProfessionalInstitutionResultInfo\", \"전문기관_실적\", {\n",
+    "    return call_api_to_file(\"getProfessionalInstituionresultInfo\", \"전문기관_실적\", {\n",
     "        \"corpCd\": corp_cd\n",
     "    })\n",
     "\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "f3ff8677",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "📡 소규모지하안전평가_리스트: 100%|██████████ 00:00s\n"
+      "📡 소규모지하안전평가_리스트: 100%|██████████ 00:01s\n"
      ]
     },
     {
@@ -347,7 +347,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "❌ 오류 발생: Expecting value: line 1 column 1 (char 0)\n"
+      "✅ 저장 완료: 지반침하_안전조치내용.json\n"
      ]
     },
     {
@@ -361,7 +361,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "❌ 오류 발생: Expecting value: line 1 column 1 (char 0)\n"
+      "✅ 저장 완료: 지반침하_응급조치내용.json\n"
      ]
     },
     {
@@ -503,7 +503,7 @@
        "''"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,8 +528,8 @@
     "\n",
     "# ✅ 지반침하위험도평가\n",
     "get_risk_assessment_list(\"20210101\", \"20211011\")  # 리스트 조회\n",
-    "get_risk_safety_info(\"E10091000030\")  # 안전조치내용 조회\n",
-    "get_risk_emergency_info(\"E10091000030\")  # 응급조치내용 조회\n",
+    "get_risk_safety_info(\"E00098000019\")  # 안전조치내용 조회\n",
+    "get_risk_emergency_info(\"E00098000019\")  # 응급조치내용 조회\n",
     "\n",
     "# ✅ 중점관리대상\n",
     "get_priority_control_list(\"20210101\", \"20211011\")  # 리스트 조회\n",
@@ -540,7 +540,7 @@
     "get_subsidence_accident_info(\"20220138\")  # 상세 조회\n",
     "\n",
     "# ✅ 전문기관\n",
-    "get_agency_list(\"20210101\", \"20211011\")  # 리스트 조회\n",
+    "get_agency_list(\"20191017\", \"20191117\")  # 리스트 조회\n",
     "get_agency_info(\"E00010\")  # 상세 조회\n",
     "get_agency_results(\"E00010\")  # 실적 조회\n",
     "\n",
