upload : csv로 변환

--- a/data.ipynb
+++ b/data.ipynb
@@ -6424,12 +6424,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e31b0b2d",
+   "metadata": {},
+   "source": [
+    "# json to csv"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b9cdca2f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 저장 완료: Database/openapi/안전점검대상_지하시설물_점검결과.csv\n",
+      "✅ 저장 완료: Database/openapi/지하개발사업_정보.csv\n",
+      "✅ 저장 완료: Database/openapi/지반침하사고_정보.csv\n",
+      "✅ 저장 완료: Database/openapi/안전점검대상_지하시설물_정보.csv\n",
+      "✅ 저장 완료: Database/openapi/소규모지하안전평가_정보.csv\n",
+      "✅ 저장 완료: Database/openapi/지반침하_응급조치내용.csv\n",
+      "✅ 저장 완료: Database/openapi/착공후지하안전조사_정보.csv\n",
+      "✅ 저장 완료: Database/openapi/지반침하_안전조치내용.csv\n",
+      "✅ 저장 완료: Database/openapi/전문기관_실적.csv\n",
+      "✅ 저장 완료: Database/openapi/전문기관_정보.csv\n",
+      "✅ 저장 완료: Database/openapi/지하안전평가_정보.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import csv\n",
+    "\n",
+    "def convert_json_to_csv(json_path, csv_path):\n",
+    "    with open(json_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "        data = json.load(f)\n",
+    "    if isinstance(data, dict):\n",
+    "        data = [data]\n",
+    "    if not data:\n",
+    "        return\n",
+    "\n",
+    "    with open(csv_path, \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
+    "        writer = csv.DictWriter(f, fieldnames=data[0].keys())\n",
+    "        writer.writeheader()\n",
+    "        writer.writerows(data)\n",
+    "\n",
+    "import os\n",
+    "import json\n",
+    "import csv\n",
+    "\n",
+    "def extract_items_from_ndjson(ndjson_path, csv_path):\n",
+    "    rows = []\n",
+    "\n",
+    "    with open(ndjson_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "        for line in f:\n",
+    "            try:\n",
+    "                obj = json.loads(line.strip())\n",
+    "                items = obj.get(\"response\", {}).get(\"body\", {}).get(\"items\", [])\n",
+    "\n",
+    "                if isinstance(items, list):\n",
+    "                    rows.extend(items)\n",
+    "                elif isinstance(items, dict):  # 단일 item일 수도 있음\n",
+    "                    rows.append(items)\n",
+    "\n",
+    "            except Exception as e:\n",
+    "                print(f\"⚠️ 오류 발생: {e}\")\n",
+    "\n",
+    "    if not rows:\n",
+    "        print(f\"🚫 저장할 데이터 없음: {ndjson_path}\")\n",
+    "        return\n",
+    "\n",
+    "    # CSV로 저장\n",
+    "    with open(csv_path, \"w\", newline=\"\", encoding=\"utf-8-sig\") as f:\n",
+    "        writer = csv.DictWriter(f, fieldnames=rows[0].keys())\n",
+    "        writer.writeheader()\n",
+    "        writer.writerows(rows)\n",
+    "\n",
+    "    print(f\"✅ 저장 완료: {csv_path}\")\n",
+    "\n",
+    "\n",
+    "def convert_all_ndjson_items_to_csv(base_dir=\"Database/openapi\"):\n",
+    "    for filename in os.listdir(base_dir):\n",
+    "        if filename.endswith(\".ndjson\") and not filename.startswith(\"test\"):\n",
+    "            ndjson_path = os.path.join(base_dir, filename)\n",
+    "            csv_path = os.path.join(base_dir, filename.replace(\".ndjson\", \".csv\"))\n",
+    "            extract_items_from_ndjson(ndjson_path, csv_path)\n",
+    "\n",
+    "# 실행\n",
+    "if __name__ == \"__main__\":\n",
+    "    convert_all_ndjson_items_to_csv()"
+   ]
   },
   {
    "cell_type": "code",
